<resources>

    <string name="app_name">驾培</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="count">账号</string>
    <string name="hint_count">请输入账号</string>
    <string name="psd">密码</string>
    <string name="hint_psd">请输入密码</string>
    <string name="auto_log_in">自动登录</string>
    <string name="log_in">登陆</string>
    <string name="forget_psd">忘记密码</string>
    <string name="main_page_title">首页</string>
    <string name="setting">我的设置</string>
    <string name="setting_name">姓名:</string>
    <string name="setting_count">账户:</string>
    <string name="setting_change_psd">修改密码</string>
    <string name="setting_wallet">我的钱包</string>
    <string name="prictice_price">练习单价</string>
    <string name="about_jiapei">关于驾培</string>
    <string name="jiapei_edition">Bate1.0</string>
    <string name="change_psd_count">账  户</string>
    <string name="initial_psd">原密码</string>
    <string name="new_psd">新密码</string>
    <string name="confirm">确认</string>
    <string name="OK">确定</string>
    <string name="OK1">提交</string>
    <string name="wallet">我的钱包</string>
    <string name="total_money">总金额</string>
    <string name="not_your_money">冻结金额</string>
    <string name="prictice_money_title">练习单价</string>
    <string name="prictice_2">科目二</string>
    <string name="prictice_3">科目三</string>
    <string name="firstpage">首页</string>
    <string name="appoint_appliction">预约申请</string>
    <string name="start_learn">开始练车</string>
    <string name="appoint_appliction_new">学员新申请的预约</string>
    <string name="record">当前可练车记录</string>
    <string name="appoint_list">预约列表</string>
    <string name="appoint_all">全部</string>
    <string name="appoint_new">新申请</string>
    <string name="has_ok">已确认</string>
    <string name="has_end">已结束</string>
    <string name="has_reject">已拒绝</string>
    <string name="leaner">学员:</string>
    <string name="appoint_list_item_price">科目单价:</string>
    <string name="appoint_list_item_practice_price">练车费用:</string>
    <string name="appoint_list_item_price_company">/课时</string>
    <string name="appoint_list_item_practice_time">练车时间:</string>
    <string name="appoint_list_item_practice_process">练车进度:</string>
    <string name="which_subjec_agree">同意</string>
    <string name="which_subjec_reject">拒绝</string>
    <string name="start_practice">学员练车</string>
    <string name="leaner_name">学员姓名：</string>
    <string name="leaner_date">练习日期：</string>
    <string name="leaner_time">练习时间：</string>
    <string name="time_price">计时单价：</string>
    <string name="total_spent">总费用：</string>
    <string name="message_list">消息列表</string>
    <string name="message_detail">消息详情</string>
    <string name="sliderbnt_hint">向右滑动确认练车</string>
    <string name="sliderbnt_hint1">向右滑动确认练车结束并扣款</string>
    <string name="hint_show">正在练车，等待学员结束</string>
    <string name="hint_show1">本次练车已结束，请准备下一场练习</string>
    <string name="sliderbnt_">同步</string>
    <string name="hint_show2">当前没有正在练车的预约</string>
    <string name="hint_show3">下拉刷新</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text1">正在刷新</string>

</resources>