<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_back"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/title_back" >

            <ImageView
                android:id="@+id/wallet_back"
                style="@style/back_bnt_style" />

            <TextView
                android:id="@+id/textView1"
                style="@style/wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wallet"
                android:textColor="#ffffff"
                android:textSize="@dimen/title_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#c8c7cc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#ffffff" >

            <TextView
                style="@style/wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/total_money"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total_money"
                style="@style/wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#c8c7cc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#ffffff" >

            <TextView
                style="@style/wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/not_your_money"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/not_your_money"
                style="@style/wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c8c7cc" />
    </LinearLayout>

    <include
        style="@style/progressbar_style"
        layout="@layout/progressbar" />

</RelativeLayout>